k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      serviceAccountName: frontend
      volumes:
        - name: frontend-config
          configMap:
            name: frontend-config
            items:
              - key: config.js
                path: config.js
      containers:
        - name: frontend
          image: REPLACE_ME_FRONTEND_IMAGE
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: frontend-config
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
              readOnly: true
